--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
 theme: jekyll-theme-minimal
 foo:
   downloads:
-    resume: /dixitk13/dixitk13.github.io/raw/downloads/Dixit_Keshavbhai_Patel.pdf
-logo:
-  self_img: /dixitk13/dixitk13.github.io/raw/downloads/Dixit_Keshavbhai_Patel.pdf
-logo: /dixitk13/dixitk13.github.io/raw/static/dixitk13.jpg
+    resume: https://github.com/dixitk13/dixitk13.github.io/raw/master/downloads/Dixit_Keshavbhai_Patel.pdf
+logo: https://github.com/dixitk13/dixitk13.github.io/raw/master/static/dixitk13.jpg
 show_downloads: true
+title: "Dixit Keshavbhai Patel"
+website:
+  owner_url: https://github.com/dixitk13
+  project_tagline: "Just another software engineer"
